Feat: Dashboard structure
Add dashboard/sidebar structure to the page, with icons.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>Admin Dashboard Design</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="dashboard">
+            <h1 class="dashboard-header"><img src="./icons/view-dashboard.svg" alt="Dashboard Icon">Dashboard</h1>
+            <ul class="dashboard-list">
+                <li><img src="./icons/home.svg" alt="Home Icon">Home</li>
+                <li><img src="./icons/card-account-details.svg" alt="Profile Icon">Profile</li>
+                <li><img src="./icons/message-reply.svg" alt="Messages Icon">Messages</li>
+                <li><img src="./icons/history.svg" alt="History Icon">History</li>
+                <li><img src="./icons/clipboard-check-outline.svg" alt="Tasks Icon">Tasks</li>
+                <li><img src="./icons/account-group.svg" alt="Communities Icon">Communities</li>
+            </ul>
+            <ul class="dashboard-list">
+                <li><img src="./icons/cog.svg" alt="Cog Icon">Settings</li>
+                <li><img src="./icons/help-box.svg" alt="Support Icon">Support</li>
+                <li><img src="./icons/shield-check.svg" alt="Privacy Icon">Privacy</li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
