Feat: Header and main content structure
Add header and main content section placeholder structure.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
                 <li><img src="./icons/shield-check.svg" alt="Privacy Icon">Privacy</li>
             </ul>
         </div>
+        <div class="header">
+            <input type="search" name="search" id="search"> 
+        </div>
+        <div class="main-content">
+            PLACEHOLDER
+        </div>
     </div>
 </body>
 </html>
