Fix: Add classes for img tags
Added big-icon and small-icon classes to img tags, to make styling icons on the page easier.

--- a/index.html
+++ b/index.html
@@ -9,23 +9,29 @@
 <body>
     <div class="container">
         <div class="dashboard">
-            <h1 class="dashboard-header"><img src="./icons/view-dashboard.svg" alt="Dashboard Icon">Dashboard</h1>
+            <h1 class="dashboard-header"><img src="./icons/view-dashboard.svg" alt="Dashboard Icon" class="big-icon">Dashboard</h1>
             <ul class="dashboard-list">
-                <li><img src="./icons/home.svg" alt="Home Icon">Home</li>
-                <li><img src="./icons/card-account-details.svg" alt="Profile Icon">Profile</li>
-                <li><img src="./icons/message-reply.svg" alt="Messages Icon">Messages</li>
-                <li><img src="./icons/history.svg" alt="History Icon">History</li>
-                <li><img src="./icons/clipboard-check-outline.svg" alt="Tasks Icon">Tasks</li>
-                <li><img src="./icons/account-group.svg" alt="Communities Icon">Communities</li>
+                <li><img src="./icons/home.svg" alt="Home Icon" class="small-icon">Home</li>
+                <li><img src="./icons/card-account-details.svg" alt="Profile Icon" class="small-icon">Profile</li>
+                <li><img src="./icons/message-reply.svg" alt="Messages Icon" class="small-icon">Messages</li>
+                <li><img src="./icons/history.svg" alt="History Icon" class="small-icon">History</li>
+                <li><img src="./icons/clipboard-check-outline.svg" alt="Tasks Icon" class="small-icon">Tasks</li>
+                <li><img src="./icons/account-group.svg" alt="Communities Icon" class="small-icon">Communities</li>
             </ul>
             <ul class="dashboard-list">
-                <li><img src="./icons/cog.svg" alt="Cog Icon">Settings</li>
-                <li><img src="./icons/help-box.svg" alt="Support Icon">Support</li>
-                <li><img src="./icons/shield-check.svg" alt="Privacy Icon">Privacy</li>
+                <li><img src="./icons/cog.svg" alt="Cog Icon" class="small-icon">Settings</li>
+                <li><img src="./icons/help-box.svg" alt="Support Icon" class="small-icon">Support</li>
+                <li><img src="./icons/shield-check.svg" alt="Privacy Icon" class="small-icon">Privacy</li>
             </ul>
         </div>
         <div class="header">
-            <input type="search" name="search" id="search"> 
+            <div class="header-top">
+                <img src="./icons/magnify.svg" alt="Search Icon" class="small-icon">
+                <input type="search" name="search" id="search">
+            </div>
+            <div class="header-bottom">
+
+            </div>
         </div>
         <div class="main-content">
             PLACEHOLDER
