Feat: Top half of header section
Added top half of the header section.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,15 @@
         </div>
         <div class="header">
             <div class="header-top">
-                <img src="./icons/magnify.svg" alt="Search Icon" class="small-icon">
-                <input type="search" name="search" id="search">
+                <div class="search-container">
+                    <img src="./icons/magnify.svg" alt="Search Icon" class="small-icon">
+                    <input type="search" name="search" id="search">
+                </div>
+                <div class="notifications-container">
+                    <img src="./icons/bell-ring-outline.svg" alt="Notifications Icon" class="small-icon">
+                    <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar" class="small-account-avatar">
+                    <p class="small-account-name">Account Name</p>
+                </div>
             </div>
             <div class="header-bottom">
 
