--- a/index.html
+++ b/index.html
@@ -61,33 +61,69 @@
             <div class="card-container">
                 <div class="card">
                     <p class="card-title">Article Title</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-buttons-container">
+                        <img src="./icons/star-plus-outline.svg" alt="Favorite Icon" class="small-icon">
+                        <img src="./icons/eye-plus-outline.svg" alt="Visibility Icon" class="small-icon">
+                        <img src="./icons/source-fork.svg" alt="Source fork Icon" class="small-icon">
+                    </div>
                 </div>
                 <div class="card">
                     <p class="card-title">Article Title</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-buttons-container">
+                        <img src="./icons/star-plus-outline.svg" alt="Favorite Icon" class="small-icon">
+                        <img src="./icons/eye-plus-outline.svg" alt="Visibility Icon" class="small-icon">
+                        <img src="./icons/source-fork.svg" alt="Source fork Icon" class="small-icon">
+                    </div>
                 </div>
                 <div class="card">
                     <p class="card-title">Article Title</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-buttons-container">
+                        <img src="./icons/star-plus-outline.svg" alt="Favorite Icon" class="small-icon">
+                        <img src="./icons/eye-plus-outline.svg" alt="Visibility Icon" class="small-icon">
+                        <img src="./icons/source-fork.svg" alt="Source fork Icon" class="small-icon">
+                    </div>
                 </div>
                 <div class="card">
                     <p class="card-title">Article Title</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-buttons-container">
+                        <img src="./icons/star-plus-outline.svg" alt="Favorite Icon" class="small-icon">
+                        <img src="./icons/eye-plus-outline.svg" alt="Visibility Icon" class="small-icon">
+                        <img src="./icons/source-fork.svg" alt="Source fork Icon" class="small-icon">
+                    </div>
                 </div>
                 <div class="card">
                     <p class="card-title">Article Title</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-buttons-container">
+                        <img src="./icons/star-plus-outline.svg" alt="Favorite Icon" class="small-icon">
+                        <img src="./icons/eye-plus-outline.svg" alt="Visibility Icon" class="small-icon">
+                        <img src="./icons/source-fork.svg" alt="Source fork Icon" class="small-icon">
+                    </div>
                 </div>
                 <div class="card">
                     <p class="card-title">Article Title</p>
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut labore
                         et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud...</p>
+                    <div class="card-buttons-container">
+                        <img src="./icons/star-plus-outline.svg" alt="Favorite Icon" class="small-icon">
+                        <img src="./icons/eye-plus-outline.svg" alt="Visibility Icon" class="small-icon">
+                        <img src="./icons/source-fork.svg" alt="Source fork Icon" class="small-icon">
+                    </div>
                 </div>
             </div>
         </div>
