Feat: Add announcements and trending section
Added announcements and trending section to the right side of main content. Styles and positioning unfinished, fixes forthcoming.

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         <div class="main-content">
             <div class="section-titles">
                 <p>Your Projects</p>
+                <p>Announcements</p>
             </div>
             <div class="card-container">
                 <div class="card">
@@ -123,6 +124,58 @@
                         <img src="./icons/star-plus-outline.svg" alt="Favorite Icon" class="small-icon">
                         <img src="./icons/eye-plus-outline.svg" alt="Visibility Icon" class="small-icon">
                         <img src="./icons/source-fork.svg" alt="Source fork Icon" class="small-icon">
+                    </div>
+                </div>
+            </div>
+            <div class="main-content-side">
+                <div class="announcements-container">
+                    <div class="announcement">
+                        <p>Announcement title</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod iste sit nemo ea fuga ut et,
+                            architecto quas omnis totam at ipsum obcaecati perspiciatis assumenda. Sed dolores fuga ipsa
+                            laudantium.</p>
+                    </div>
+                    <div class="announcement">
+                        <p>Announcement title</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod iste sit nemo ea fuga ut et,
+                            architecto quas omnis totam at ipsum obcaecati perspiciatis assumenda. Sed dolores fuga ipsa
+                            laudantium.</p>
+                    </div>
+                    <div class="announcement">
+                        <p>Announcement title</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod iste sit nemo ea fuga ut et,
+                            architecto quas omnis totam at ipsum obcaecati perspiciatis assumenda. Sed dolores fuga ipsa
+                            laudantium.</p>
+                    </div>
+                </div>
+                <div class="trending-container">
+                    <div class="trend">
+                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small" class="small-account-avatar">
+                        <div class="trend-text">
+                            <p>@JohnDoe</p>
+                            <p>Doing nothing</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small" class="small-account-avatar">
+                        <div class="trend-text">
+                            <p>@JohnDoe</p>
+                            <p>Doing nothing</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small" class="small-account-avatar">
+                        <div class="trend-text">
+                            <p>@JohnDoe</p>
+                            <p>Doing nothing</p>
+                        </div>
+                    </div>
+                    <div class="trend">
+                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small" class="small-account-avatar">
+                        <div class="trend-text">
+                            <p>@JohnDoe</p>
+                            <p>Doing nothing</p>
+                        </div>
                     </div>
                 </div>
             </div>
