Feat: Sidebar styling
Added styling to announcements and trending sections. Some alignments and styling on the page are either incorrect or imperfect but I am considering it a working mockup, complete, and moving on from this project.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,8 @@
             </div>
         </div>
         <div class="main-content">
-            <div class="section-titles">
-                <p>Your Projects</p>
-                <p>Announcements</p>
-            </div>
             <div class="card-container">
+                <p>Your Projects</p>
                 <div class="card">
                     <p class="card-title">Article Title</p>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -128,6 +125,7 @@
                 </div>
             </div>
             <div class="main-content-side">
+                <p>Announcements</p>
                 <div class="announcements-container">
                     <div class="announcement">
                         <p>Announcement title</p>
@@ -148,30 +146,35 @@
                             laudantium.</p>
                     </div>
                 </div>
+                <p>Trending</p>
                 <div class="trending-container">
                     <div class="trend">
-                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small" class="small-account-avatar">
+                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small"
+                            class="small-account-avatar">
                         <div class="trend-text">
                             <p>@JohnDoe</p>
                             <p>Doing nothing</p>
                         </div>
                     </div>
                     <div class="trend">
-                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small" class="small-account-avatar">
+                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small"
+                            class="small-account-avatar">
                         <div class="trend-text">
                             <p>@JohnDoe</p>
                             <p>Doing nothing</p>
                         </div>
                     </div>
                     <div class="trend">
-                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small" class="small-account-avatar">
+                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small"
+                            class="small-account-avatar">
                         <div class="trend-text">
                             <p>@JohnDoe</p>
                             <p>Doing nothing</p>
                         </div>
                     </div>
                     <div class="trend">
-                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small" class="small-account-avatar">
+                        <img src="./icons/avatar-svgrepo-com.svg" alt="Account Avatar, Small"
+                            class="small-account-avatar">
                         <div class="trend-text">
                             <p>@JohnDoe</p>
                             <p>Doing nothing</p>
